--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="./styles/main.css">
 </head>
 <body>
-    <main id="content"></main>
-
+    <input type="text" placeholder="Enter Agent or Business name..." id="search" />
+    <main id="content">
+    </main>
     <script src="./scripts/main.js" type="module"></script>
 </body>
 </html>
